--- a/favicon/site-manifest.json
+++ b/favicon/site-manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "EcoBus",
-    "short_name": "EcoBus",
+    "short_name": "EB",
     "icons": [
         {
             "src": "/android-chrome-192x192.png",
