cuurent location marking done

--- a/ecobus/.env
+++ b/ecobus/.env
@@ -5,3 +5,4 @@ REACT_APP_STORAGE_BUCKET=ecobus-189e8.appspot.com
 REACT_APP_MESSAGING_ID=146217559536
 REACT_APP_APP_ID=1:146217559536:web:80cabc2bf8efccd8852935
 REACT_APP_MEASUREMENT_ID=G-X7E8K69Z01
+REACT_APP_GOOGLE_MAP_API_KEY=AIzaSyBZe2cBc8NJ5sUeToVP8Oq_Smyx5XR-gFU
